# Grep

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
.githooks/: pre-commit  pre-push
.github/workflows/: build.yml
includes/: ilogger.hpp  logger.hpp  my_grep.hpp  paths_tracker.hpp
includes/logging/: consolebackend.hpp  formatters.hpp  iloggerbackend.hpp  log_entry.hpp  textfilebackend.hpp
src/: CMakeLists.txt  ilogger.hpp  logger.cpp  logger.hpp  main.cpp  my_grep.cpp  my_grep.hpp  paths_tracker.cpp
src/logging/: consolebackend.cpp  formatters.cpp  textfilebackend.cpp
tests/: CMakeLists.txt  my_grep_tests.cpp
